--- a/src/pages/services/dpe.astro
+++ b/src/pages/services/dpe.astro
@@ -3,7 +3,10 @@ import Layout from "../../layouts/Layout.astro";
 import ServiceDetails from "../../layouts/ServiceDetail.astro";
 ---
 
-<Layout title="Benedikt Ritter - Developer Productivity Consulting">
+<Layout
+  title="Benedikt Ritter - Developer Productivity Consulting"
+  description="Learn more about my Developer Productivity consulting services"
+>
   <ServiceDetails pageTitle="Developer Productivity Engineering">
     <p class="mb-8">
       Developer Productivity Engineering (DPE) is rapidly emerging as the next
