--- a/src/pages/services/engineering-growth.astro
+++ b/src/pages/services/engineering-growth.astro
@@ -3,8 +3,11 @@ import Layout from "../../layouts/Layout.astro";
 import ServiceDetail from "../../layouts/ServiceDetail.astro";
 ---
 
-<Layout title="Benedikt Ritter - Developer Productivity Consulting">
-  <ServiceDetail pageTitle="Engineering Growth">
+<Layout
+  title="Benedikt Ritter - Engineering Growth Consulting"
+  description="Learn more about my Engineering Growth consulting services"
+>
+  <ServiceDetail pageTitle="Engineering Growth Consulting">
     <p class="mb-8">
       In today’s world, every business is essentially a software business.
       Whether you’re developing products, services, or solutions, software is at
