--- a/src/pages/services/gradle.astro
+++ b/src/pages/services/gradle.astro
@@ -3,8 +3,11 @@ import Layout from "../../layouts/Layout.astro";
 import ServiceDetail from "../../layouts/ServiceDetail.astro";
 ---
 
-<Layout title="Benedikt Ritter - Developer Productivity Consulting">
-  <ServiceDetail pageTitle="Gradle consulting">
+<Layout
+  title="Benedikt Ritter - Gradle Build Tool Consulting"
+  description="Learn more about my Gradle Build Tool consulting services"
+>
+  <ServiceDetail pageTitle="Gradle Build Tool Consulting">
     <p class="mb-8">
       Gradle is one of the most powerful and flexible build systems available,
       used by millions of developers worldwide to automate builds and streamline
