--- a/src/pages/services/nixos.astro
+++ b/src/pages/services/nixos.astro
@@ -3,8 +3,11 @@ import Layout from "../../layouts/Layout.astro";
 import ServiceDetail from "../../layouts/ServiceDetail.astro";
 ---
 
-<Layout title="Benedikt Ritter - Developer Productivity Consulting">
-  <ServiceDetail pageTitle="NixOS consulting">
+<Layout
+  title="Benedikt Ritter - NixOS Consulting"
+  description="Learn more about my NixOS Consulting services"
+>
+  <ServiceDetail pageTitle="NixOS Consulting">
     <p class="mb-8">
       NixOS is a cutting-edge Linux distribution built on the principles of
       declarative configuration and reproducibility. Its package manager, Nix,
