--- a/src/pages/services/index.astro
+++ b/src/pages/services/index.astro
@@ -3,6 +3,9 @@ import Layout from "../../layouts/Layout.astro";
 import Services from "../../components/sections/Services.astro";
 ---
 
-<Layout title="Benedikt Ritter - Developer Productivity Consulting">
+<Layout
+  title="Benedikt Ritter - Developer Productivity Consulting"
+  description="Learn more about my consulting services"
+>
   <Services />
 </Layout>
