--- a/src/components/ServiceTile.astro
+++ b/src/components/ServiceTile.astro
@@ -18,8 +18,8 @@ const imageSrc =
     style={`background-image:url('${imageUrl ? imageUrl : imageSrc}')`}
   >
     <div
-      class="flex flex-col justify-center w-full h-full px-8 py-4 transition-opacity duration-700
-                opacity-0 backdrop-blur-sm bg-gray-800/60 group-hover:opacity-100"
+      class="flex flex-col justify-center w-full h-full px-8 py-4
+        backdrop-blur-sm bg-gray-800/60 opacity-100"
     >
       <h2 class="mt-4 text-xl font-semibold text-white">{title}</h2>
       <p class="mt-2 text-lg tracking-wider text-primary uppercase">{type}</p>
