Fix astro build error

--- a/src/pages/terms.astro
+++ b/src/pages/terms.astro
@@ -1,12 +1,12 @@
 ---
 import Layout from "../layouts/Layout.astro";
-import { Content as Terms } from "../content/terms.md";
+import { Content } from "../content/terms.md";
 ---
 
 <Layout title="Terms & Conditions">
   <section class="bg-background">
     <div class="container px-6 py-8 mx-auto prose prose-lg">
-      <Terms />
+      <Content />
     </div>
   </section>
 </Layout>
