--- a/src/layouts/Layout.astro
+++ b/src/layouts/Layout.astro
@@ -1,8 +1,8 @@
 ---
 import Header from "../components/sections/Header.astro";
 import Footer from "../components/sections/Footer.astro";
-import ContactForm from "../components/ContactForm";
 import "../styles/index.css";
+import Contact from "../components/contact/Contact.astro";
 
 interface Props {
   title: string;
@@ -73,7 +73,7 @@ const { title, description, image, type = "website" } = Astro.props;
     <section class="flex-grow">
       <slot />
     </section>
-    <ContactForm client:load />
+    <Contact />
     <Footer />
   </body>
 </html>
