--- a/src/components/CardListSection.astro
+++ b/src/components/CardListSection.astro
@@ -11,9 +11,9 @@ interface Item {
 const { title, items } = Astro.props;
 ---
 
-<section class="py-14 bg-background">
+<section class="bg-background py-14">
   <div class="container mx-auto px-4">
-    <h2 class="text-3xl lg:text-4xl font-semibold text-center mb-12">
+    <h2 class="mb-12 text-center text-3xl font-semibold lg:text-4xl">
       {title}
     </h2>
 
