--- a/src/components/ThemeToggle.astro
+++ b/src/components/ThemeToggle.astro
@@ -4,10 +4,7 @@ import { Icon } from "astro-icon/components";
 
 <button
   id="toggle-theme-button"
-  class="py-2 px-3 inline-flex items-center gap-x-2 text-sm
-    font-medium rounded-lg border bg-background
-    text-text shadow-sm hover:bg-background-offset
-    focus:outline-none focus:bg-background-offset"
+  class="bg-background text-text hover:bg-background-offset focus:bg-background-offset inline-flex items-center gap-x-2 rounded-lg border px-3 py-2 text-sm font-medium shadow-sm focus:outline-none"
 >
   <div id="icon-theme-light">
     <Icon id="toggle-theme-icon" name={"Sun"} />
