--- a/src/components/BlogItem.astro
+++ b/src/components/BlogItem.astro
@@ -8,18 +8,17 @@ const url = `/blog/${blogParams.path}`;
 
 <a href={url} class="block">
   <li
-    class="group flex flex-col md:flex-row items-start bg-background p-5 rounded-lg shadow-md
-        border border-default hover:shadow-lg transition-shadow"
+    class="bg-background group flex flex-col items-start rounded-lg border border-default p-5 shadow-md transition-shadow hover:shadow-lg md:flex-row"
   >
     <div class="flex-1 pr-3">
       <h3
-        class="text-2xl font-semibold group-hover:text-primary transition-colors pt-1"
+        class="pt-1 text-2xl font-semibold transition-colors group-hover:text-primary"
       >
         {blog.data.title}
       </h3>
       <time
         datetime={blog.data.pubDate.toLocaleDateString()}
-        class="block mt-3 text-sm text-offset"
+        class="mt-3 block text-sm text-offset"
       >
         {
           new Date(blog.data.pubDate).toLocaleDateString("en-US", {
@@ -29,16 +28,15 @@ const url = `/blog/${blogParams.path}`;
           })
         }
       </time>
-      <p class="text-offset mt-4 line-clamp-2">{blog.data.description}</p>
+      <p class="mt-4 line-clamp-2 text-offset">{blog.data.description}</p>
     </div>
     {
       blog.data.image && (
-        <div class="block w-full md:w-1/4 rounded-lg mt-4 lg:mt-1">
+        <div class="mt-4 block w-full rounded-lg md:w-1/4 lg:mt-1">
           <img
             src={blogParams.image}
             alt={blog.data.title}
-            class="w-full lg:h-auto object-cover object-center rounded-lg
-                    md:group-hover:scale-105 transition-transform duration-300"
+            class="w-full rounded-lg object-cover object-center transition-transform duration-300 md:group-hover:scale-105 lg:h-auto"
           />
         </div>
       )
