--- a/src/components/BlogList.astro
+++ b/src/components/BlogList.astro
@@ -5,9 +5,9 @@ import BlogItem from "./BlogItem.astro";
 const { blogs } = Astro.props;
 ---
 
-<section class="py-12 bg-background">
-  <div class="container mx-auto px-4 max-w-4xl">
-    <h1 class="text-center text-3xl mb-10">Recent posts</h1>
+<section class="bg-background py-12">
+  <div class="container mx-auto max-w-4xl px-4">
+    <h1 class="mb-10 text-center text-3xl">Recent posts</h1>
     <ul class="space-y-6">
       {blogs.map((blog: Blog) => <BlogItem blog={blog} />)}
     </ul>
