--- a/src/components/ServiceTile.astro
+++ b/src/components/ServiceTile.astro
@@ -14,15 +14,14 @@ const imageSrc =
 
 <a href={link} rel="noopener noreferrer">
   <div
-    class="overflow-hidden bg-cover rounded-lg cursor-pointer h-64 group"
+    class="group h-64 cursor-pointer overflow-hidden rounded-lg bg-cover"
     style={`background-image:url('${imageUrl ? imageUrl : imageSrc}')`}
   >
     <div
-      class="flex flex-col justify-center w-full h-full px-8 py-4
-        backdrop-blur-sm bg-gray-800/60 opacity-100"
+      class="flex h-full w-full flex-col justify-center bg-gray-800/60 px-8 py-4 opacity-100 backdrop-blur-sm"
     >
       <h2 class="mt-4 text-xl font-semibold text-white">{title}</h2>
-      <p class="mt-2 text-lg tracking-wider text-primary uppercase">{type}</p>
+      <p class="mt-2 text-lg uppercase tracking-wider text-primary">{type}</p>
     </div>
   </div>
 </a>
