--- a/src/components/sections/Resume.astro
+++ b/src/components/sections/Resume.astro
@@ -3,10 +3,10 @@ import Experience from "./sub_sections/Experience.astro";
 import Education from "./sub_sections/Education.astro";
 ---
 
-<section class="py-8 bg-background">
+<section class="bg-background py-8">
   <div class="container mx-auto px-6">
     <div class="flex flex-col lg:flex-row lg:space-x-12">
-      <div class="lg:w-1/2 mb-12 lg:mb-0">
+      <div class="mb-12 lg:mb-0 lg:w-1/2">
         <Experience />
       </div>
 
