--- a/src/components/sections/Services.astro
+++ b/src/components/sections/Services.astro
@@ -4,8 +4,8 @@ import { services } from "../../config/cv.json";
 ---
 
 <section class="bg-background">
-  <div class="container px-6 py-8 mx-auto">
-    <h1 class="text-3xl font-semibold text-center capitalize lg:text-4xl">
+  <div class="container mx-auto px-6 py-8">
+    <h1 class="text-center text-3xl font-semibold capitalize lg:text-4xl">
       Services
     </h1>
 
@@ -20,10 +20,10 @@ import { services } from "../../config/cv.json";
     </p>
 
     <div
-      class="grid grid-cols-1 gap-8 mt-8 xl:mt-12 xl:gap-12 md:grid-cols-2 xl:grid-cols-2"
+      class="mt-8 grid grid-cols-1 gap-8 md:grid-cols-2 xl:mt-12 xl:grid-cols-2 xl:gap-12"
     >
       {
-        services.map((service) => (
+        services.map(service => (
           <Service
             imageUrl={service.imageUrl}
             image={service.image}
