--- a/src/layouts/Layout.astro
+++ b/src/layouts/Layout.astro
@@ -48,7 +48,7 @@ const { title, description, image, type = "website" } = Astro.props;
         document.documentElement.dataset.theme = themeSaved;
       } else {
         const prefersDark = window.matchMedia(
-          "(prefers-color-scheme: dark)",
+          "(prefers-color-scheme: dark)"
         ).matches;
 
         document.documentElement.dataset.theme = prefersDark ? "dark" : "light";
@@ -56,7 +56,7 @@ const { title, description, image, type = "website" } = Astro.props;
 
       window
         .matchMedia("(prefers-color-scheme: dark)")
-        .addEventListener("change", (event) => {
+        .addEventListener("change", event => {
           if (!localStorage.getItem("theme")) {
             document.documentElement.dataset.theme = event.matches
               ? "dark"
@@ -66,8 +66,7 @@ const { title, description, image, type = "website" } = Astro.props;
     </script>
   </head>
   <body
-    class="h-full flex flex-col overflow-x-hidden bg-default
-      text-default text-base selection:bg-secondary"
+    class="flex h-full flex-col overflow-x-hidden bg-default text-base text-default selection:bg-secondary"
   >
     <Header />
     <section class="flex-grow">
