--- a/src/layouts/ServiceDetail.astro
+++ b/src/layouts/ServiceDetail.astro
@@ -3,8 +3,8 @@ const { pageTitle } = Astro.props;
 ---
 
 <section class="bg-background">
-  <div class="container px-6 py-8 mx-auto">
-    <h1 class="text-3xl font-semibold text-center capitalize lg:text-4xl">
+  <div class="container mx-auto px-6 py-8">
+    <h1 class="text-center text-3xl font-semibold capitalize lg:text-4xl">
       {pageTitle}
     </h1>
 
