--- a/src/pages/terms.astro
+++ b/src/pages/terms.astro
@@ -5,7 +5,7 @@ import { Content } from "../content/terms.md";
 
 <Layout title="Terms & Conditions">
   <section class="bg-background">
-    <div id="markdown" class="container px-6 py-8 mx-auto prose prose-lg">
+    <div id="markdown" class="container prose prose-lg mx-auto px-6 py-8">
       <Content />
     </div>
   </section>
