Add testimonial carousel with dummy contents

--- a/src/pages/index.astro
+++ b/src/pages/index.astro
@@ -3,10 +3,12 @@ import Layout from "../layouts/Layout.astro";
 import Hero from "../components/sections/Hero.astro";
 import Resume from "../components/sections/Resume.astro";
 import Services from "../components/sections/Services.astro";
+import Testimonials from "../components/sections/Testimonials.astro";
 ---
 
 <Layout title="Benedikt Ritter - Developer Productivity Consulting">
   <Hero />
+  <Testimonials />
   <Services />
   <Resume />
 </Layout>
