Fix build errors

--- a/src/components/sections/Testimonials.astro
+++ b/src/components/sections/Testimonials.astro
@@ -1,18 +1,17 @@
 ---
 import TestimonialsCarousel from "./Testimonials_Carousel.jsx";
 import { testimonials } from "../../config/cv.json";
-type ImageModule = { src: string };
 const images = import.meta.glob("../../assets/*.{jpg,png}", {
   eager: true,
   import: "default",
-}) as ImageModule;
+});
 
 // Create a key:value map where keys are filenames like "alice.jpg"
 const imageMap = Object.fromEntries(
   Object.entries(images).map(([path, mod]) => {
     const parts = path.split("/");
     const filename = parts[parts.length - 1];
-    return [filename, mod.src];
+    return [filename, mod];
   })
 );
 
