--- a/src/components/ServiceTile.astro
+++ b/src/components/ServiceTile.astro
@@ -21,7 +21,7 @@ const imageSrc =
       class="flex h-full w-full flex-col justify-center bg-gray-800/60 px-8 py-4 opacity-100 backdrop-blur-sm"
     >
       <h2 class="mt-4 text-xl font-semibold text-white">{title}</h2>
-      <p class="mt-2 text-lg uppercase tracking-wider text-primary">{type}</p>
+      <p class="text-primary mt-2 text-lg tracking-wider uppercase">{type}</p>
     </div>
   </div>
 </a>
