--- a/src/components/sections/Hero.astro
+++ b/src/components/sections/Hero.astro
@@ -15,7 +15,7 @@ import { basic } from "../../config/cv.json";
         />
       </div>
       <div>
-        <p class="text-lg text-offset">
+        <p class="text-offset text-lg">
           {basic?.job}
         </p>
 
@@ -32,7 +32,7 @@ import { basic } from "../../config/cv.json";
             href=`/cv/${basic?.cv_file_name}`
             title="Download CV"
             download
-            class="inline-flex items-center justify-center rounded bg-primary px-10 py-4 text-base font-semibold text-white transition-all duration-200 hover:bg-secondary focus:bg-secondary"
+            class="bg-primary hover:bg-secondary focus:bg-secondary inline-flex items-center justify-center rounded px-10 py-4 text-base font-semibold text-white transition-all duration-200"
             role="button"
           >
             Download CV
