--- a/src/components/sections/Services.astro
+++ b/src/components/sections/Services.astro
@@ -9,7 +9,7 @@ import { services } from "../../config/cv.json";
       Services
     </h1>
 
-    <p class="mt-4 text-center text-offset">
+    <p class="text-offset mt-4 text-center">
       These are the Developer Productivity services I offer to help teams work
       more efficiently and effectively. If none of these services align with
       your needs, I am also available for software development projects, where I
