--- a/src/components/sections/Testimonials.astro
+++ b/src/components/sections/Testimonials.astro
@@ -42,7 +42,7 @@ const processedTestimonials = testimonials.map(t => {
       Testimonials
     </h1>
 
-    <p class="mt-4 text-center text-offset">
+    <p class="text-offset mt-4 text-center">
       Don't just take my word for it. I could tell you I'm a passionate and
       reliable software developer—but it's much more meaningful to hear from the
       people I've worked with directly. These are real quotes from
