--- a/src/components/sections/Footer.astro
+++ b/src/components/sections/Footer.astro
@@ -14,12 +14,12 @@ const currentYear = new Date().getFullYear();
       <!-- Left Section: Navigation Links -->
       <div class="flex flex-col items-center md:items-start">
         <h3 class="text-sm font-semibold">Navigation</h3>
-        <ul class="ml-4 mt-2 space-y-2">
+        <ul class="mt-2 ml-4 space-y-2">
           <li>
             <a
               href="/blog"
               title="Blog"
-              class="text-sm transition-all duration-200 hover:text-opacity-80 hover:underline focus:text-opacity-80"
+              class="hover:text-opacity-80 focus:text-opacity-80 text-sm transition-all duration-200 hover:underline"
             >
               Blog
             </a>
@@ -28,7 +28,7 @@ const currentYear = new Date().getFullYear();
             <a
               href="/services"
               title="Services"
-              class="text-sm transition-all duration-200 hover:text-opacity-80 hover:underline focus:text-opacity-80"
+              class="hover:text-opacity-80 focus:text-opacity-80 text-sm transition-all duration-200 hover:underline"
             >
               Services
             </a>
@@ -37,7 +37,7 @@ const currentYear = new Date().getFullYear();
             <a
               href="/"
               title="About"
-              class="text-sm transition-all duration-200 hover:text-opacity-80 hover:underline focus:text-opacity-80"
+              class="hover:text-opacity-80 focus:text-opacity-80 text-sm transition-all duration-200 hover:underline"
             >
               About
             </a>
@@ -58,7 +58,7 @@ const currentYear = new Date().getFullYear();
               title="RSS Feed"
               target="_blank"
               rel="noopener noreferrer"
-              class="block transition-all duration-200 hover:text-opacity-80 focus:text-opacity-80"
+              class="hover:text-opacity-80 focus:text-opacity-80 block transition-all duration-200"
             >
               <Icon name="Rss" />
             </a>
@@ -69,7 +69,7 @@ const currentYear = new Date().getFullYear();
               title="Github"
               target="_blank"
               rel="noopener noreferrer"
-              class="block transition-all duration-200 hover:text-opacity-80 focus:text-opacity-80"
+              class="hover:text-opacity-80 focus:text-opacity-80 block transition-all duration-200"
             >
               <Icon name="Github" />
             </a>
@@ -80,7 +80,7 @@ const currentYear = new Date().getFullYear();
               title="Mastodon"
               target="_blank"
               rel="noopener noreferrer"
-              class="block transition-all duration-200 hover:text-opacity-80 focus:text-opacity-80"
+              class="hover:text-opacity-80 focus:text-opacity-80 block transition-all duration-200"
             >
               <Icon name="Mastodon" />
             </a>
@@ -91,7 +91,7 @@ const currentYear = new Date().getFullYear();
               title="LinkedIn"
               target="_blank"
               rel="noopener noreferrer"
-              class="block transition-all duration-200 hover:text-opacity-80 focus:text-opacity-80"
+              class="hover:text-opacity-80 focus:text-opacity-80 block transition-all duration-200"
             >
               <Icon name="LinkedIn" />
             </a>
@@ -103,7 +103,7 @@ const currentYear = new Date().getFullYear();
       <div class="flex justify-center md:justify-end">
         <a
           href="/terms"
-          class="text-sm transition-all duration-200 hover:text-opacity-80 hover:underline focus:text-opacity-80"
+          class="hover:text-opacity-80 focus:text-opacity-80 text-sm transition-all duration-200 hover:underline"
         >
           Terms & Conditions
         </a>
