--- a/src/layouts/Layout.astro
+++ b/src/layouts/Layout.astro
@@ -66,7 +66,7 @@ const { title, description, image, type = "website" } = Astro.props;
     </script>
   </head>
   <body
-    class="flex h-full flex-col overflow-x-hidden bg-default text-base text-default selection:bg-secondary"
+    class="bg-default text-default selection:bg-secondary flex h-full flex-col overflow-x-hidden text-base"
   >
     <Header />
     <section class="flex-grow">
