--- a/src/layouts/ServiceDetail.astro
+++ b/src/layouts/ServiceDetail.astro
@@ -8,7 +8,7 @@ const { pageTitle } = Astro.props;
       {pageTitle}
     </h1>
 
-    <div class="mt-4 text-offset">
+    <div class="text-offset mt-4">
       <slot />
     </div>
   </div>
