--- a/src/components/BlogItem.astro
+++ b/src/components/BlogItem.astro
@@ -8,7 +8,7 @@ const url = `/blog/${blogParams.path}`;
 
 <a href={url} class="block">
   <li
-    class="bg-background group border-default flex flex-col items-start rounded-lg border p-5 shadow-md transition-shadow hover:shadow-lg md:flex-row"
+    class="blog-post bg-background group border-default flex flex-col items-start rounded-lg border p-5 shadow-md transition-shadow hover:shadow-lg md:flex-row"
   >
     <div class="flex-1 pr-3">
       <h3
