test: mask copyright year
Otherwise screenshots need to be updated each year.

--- a/src/components/sections/Footer.astro
+++ b/src/components/sections/Footer.astro
@@ -47,7 +47,7 @@ const currentYear = new Date().getFullYear();
 
       <!-- Center Section: Copyright & Social Links -->
       <div class="flex flex-col items-center">
-        <p class="text-sm">
+        <p class="footer-copyright text-sm">
           © {currentYear}
           {basic.name}. All Rights Reserved.
         </p>
